tests/fail/ch_nightly/raw_string.stderr
error: Missing Type for given '{}' Placeholder
 --> $DIR/raw_string.rs:2:32
  |
2 |     sscanf::scanf!("hi", r"asdf{}asdf");
  |                                ^^

error: Unknown format option: 'bob'.
       Hint: Regex format options must start and end with '/'
 --> $DIR/raw_string.rs:3:34
  |
3 |     sscanf::scanf!("hi", r"asdf{:bob}asdf", usize);
  |                                  ^^^

error: Unknown format option: 'bob'.
       Hint: Regex format options must start and end with '/'
 --> $DIR/raw_string.rs:4:39
  |
4 |     sscanf::scanf!("hi", r"asdf{usize:bob}asdf");
  |                                       ^^^

error: Missing Type for given '{}' Placeholder
 --> $DIR/raw_string.rs:5:34
  |
5 |     sscanf::scanf!("hi", r##"asdf{}asdf"##);
  |                                  ^^

error: Unknown format option: 'bob'.
       Hint: Regex format options must start and end with '/'
 --> $DIR/raw_string.rs:6:36
  |
6 |     sscanf::scanf!("hi", r##"asdf{:bob}asdf"##, usize);
  |                                    ^^^

error: Unknown format option: 'bob'.
       Hint: Regex format options must start and end with '/'
 --> $DIR/raw_string.rs:7:41
  |
7 |     sscanf::scanf!("hi", r##"asdf{usize:bob}asdf"##);
  |                                         ^^^
